<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cp.brittany.dixon.activities.view_models.AuthViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.auth.forgot_password.ForgotPasswordActivity">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_ripple"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvForgotPasswordHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/forgot_password_head"
            android:textColor="@color/black"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <TextView
            android:id="@+id/tvAlreadyHaveAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="14dp"
            android:fontFamily="@font/roboto_regular"
            android:lineHeight="18dp"
            android:text="@string/forgot_password_description"
            android:textColor="@color/grey_900_off_70"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordHead" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/email"
            android:textColor="@color/indigo_200"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/tvForgotPasswordHead"
            app:layout_constraintTop_toBottomOf="@id/tvAlreadyHaveAccount" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:backgroundTint="@color/view_line_color"
            android:fontFamily="@font/roboto_regular"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/tvEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="28dp"
            android:layout_marginTop="-25dp"
            android:visibility="gone"
            app:boxStrokeErrorColor="@null"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/bg_btn_main_grey"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/roboto_medium"
            android:foreground="@drawable/bg_ripple"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>