<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.home.shops_tab.ComingShopFragment">

        <ImageView
            android:id="@+id/ivComingSoon"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_coming_shop"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_coming_shop_mask"
            app:layout_constraintBottom_toBottomOf="@id/ivComingSoon"
            app:layout_constraintTop_toBottomOf="@id/guideline1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvComingSoon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/coming_soon"
            android:textColor="@color/light_blue_a700"
            android:textSize="14sp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv1" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/coming_shop_title"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/ivComingSoon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="19dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/coming_shop_details"
            android:textColor="@color/blue_grey_text_600"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.88" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.42" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>